# balobi_nini

./: .dockerignore  .env.sample  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile-Prod  Makefile  Pipfile  README.md  TODOS.md  airflow.cfg  airflow.db  build_word2vec_model_v020.py  config.py  constants.py  credentials.sample.json  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  get_and_clean_tweets-deployment.yaml  logger_config.py  manage.py  model.py  pipeline.py  prefect_deployment.py  pyproject.toml  requirements-new.txt  requirements.txt  stream_it.py
app/: __init__.py  config.py  model.py  views.py
dags/: __init__.py  airflows_tasks.py  get_and_clean_tweets.py  tweet_word_cloud.py
data/: cleanned_tweets.csv  cleanned_tweets_01-06-2019-14-13.csv  cleanned_tweets_03-06-2019-13-16.csv  cleanned_tweets_03-06-2019-13-45.csv  cleanned_tweets_03-06-2019-14-07.csv  cleanned_tweets_03-06-2019-22-41.csv  cleanned_tweets_03-06-2019-23-04.csv  cleanned_tweets_04-06-2019-09-40.csv  cleanned_tweets_04-06-2019-09-47.csv  cleanned_tweets_04-06-2019-09-50.csv  cleanned_tweets_04-06-2019-09-58.csv  cleanned_tweets_04-06-2019-16-01.csv  cleanned_tweets_04-06-2019-16-06.csv  cleanned_tweets_04-06-2019-16-09.csv  cleanned_tweets_04-06-2019-22-13.csv  cleanned_tweets_04-06-2019-22-19.csv  cleanned_tweets_04-06-2019-22-25.csv  cleanned_tweets_04-06-2019-22-31.csv  cleanned_tweets_04-06-2019-22-50.csv  cleanned_tweets_04-06-2019-23-07.csv  cleanned_tweets_11-05-2020-17-17.csv  cleanned_tweets_16-10-2019-13-31.csv  home_timeline.jsonl  (+16 more)
(+57 files in other folders)
